<resources>
    <string name="app_name">JokesApp</string>
    <string name="action_settings">Settings</string>
    <string name="search">Location</string>
    <string name="about">Acerca de </string>
    <string name="feedback">Calificar App</string>
    <string name="title_activity_info_joke">You are laughing...Ha</string>
    <string name="title_activity_create_joke">CreateJokeActivity</string>
    <string name="title">Titulo</string>
    <string name="category">Categoria</string>
    <string name="joke">Contenido del chiste...</string>
    <string name="user">Usuario...</string>
    <string name="save_menu">Guardar</string>
    <string name="is_dirty">Es verde:</string>
    <string name="problem_to_download_json">Tenes problemas para actualizar los chistes, por favor verifica tu conexión a Internet</string>
    <string name="error_loading_app">Error cargando JokerApp</string>
    <string name="last_version">Ya tienes la última versión, proba otro día si han surgido nuevos chistes!</string>
    <string name="give_us_a_feedback">Danos un feedback vieja!</string>
    <string name="loading_title">Cargando chistes...</string>
    <string name="loading_message">La ansiedad no le debe ganar a tu sentido del humor!!!</string>
    <string name="close_message">¿Vas a parar de reir?</string>
    <string name="warning_dirty_joke">Chistes para personas adultas serán agregados, ¿vas a querer incluirlos?</string>

    <string name="banner_ad_unit_idTest">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="ad_main_banner">ca-app-pub-7583676595231228/4884901198</string>
    <string name="ad_info_banner">ca-app-pub-7583676595231228/6361634395</string>
    <string name="ad_info_interstitial">ca-app-pub-7583676595231228/9315100791</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>

    <string name="refresh">Actualizar</string>
    <string name="title_activity_main_grid_joker">MainGridJoker</string>

    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="message_delete_joke">¿Realmente queres borrar este chiste?</string>
    <string name="yes_exit">Si, me voy</string>
    <string name="no_exit">Me quedo</string>
    <string name="yes_deletion">Si, borralo</string>
    <string name="no_deletion">No, no lo borres</string>
    <string name="yes_dirty_joke">Si, jaja!!!</string>
    <string name="no_dirty_joke">Mmm, mejor no</string>

    <!--TODO intro slider-->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">SIGUIENTE</string>
    <string name="skip">OMITIR</string>
    <string name="start">LISTO</string>

    <string name="slide_1_title">ACTUALIZÁ</string>
    <string name="slide_1_desc">Actualiza periodicamente y consigue nuevos chistes y bromas</string>

    <string name="slide_2_title">PERSONALIZÁ</string>
    <string name="slide_2_desc">Puedes elegir si quieres ver chistes o bromas ofensivas o ver solo los normales</string>

    <string name="slide_3_title">COMPARTÍ</string>
    <string name="slide_3_desc">Compartí los chistes que mas te gustan en cualquier red social</string>

    <string name="slide_4_title">VALORÁ</string>
    <string name="slide_4_desc">Dale like o dislike, danos tu opinión. Los peores desaparecerán</string>

    <string name="slide_5_title">BORRÁ</string>
    <string name="slide_5_desc">Puedes borrar los chistes o bromas que no te gusten y quedarte con los que sí</string>

    <string name="slide_6_title">SOLICITÁ</string>
    <string name="slide_6_desc">Puedes obtener otro chiste de la misma categoría de manera aleatoria </string>

    <string name="slide_7_title">JokerApp</string>
    <string name="slide_7_desc">Ayudanos con tu recomendación, enviandonos tu chiste a corpoideasoft@gmail.com</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="success_to_download_json">Has descargado exitosamente nuevos chistes y bromas</string>
    <string name="references">Referencias</string>

    <string name="animals_category">animales</string>
    <string name="feminists_category">feministas</string>
    <string name="drunks_category">borrachos</string>
    <string name="sports_category">deportes</string>
    <string name="male_chauvinists_category">machistas</string>
    <string name="others_category">otros</string>
    <string name="news_category">nuevos</string>
    <string name="bests_category">destacados</string>
    <string name="is_not_same_category">no es lo mismo</string>
    <string name="professionals_category">profesionales</string>

</resources>
