<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.harriague.curso.myapplication.InfoJokeActivity"
    tools:showIn="@layout/activity_info_joke">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/title_joke_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/InputJoke"
                android:hint="@string/title"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/category_joke_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/category"/>

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AreaStyle">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/joke_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/joke"/>
            </android.support.design.widget.TextInputLayout>

        </ScrollView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_joke_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/InputJoke"
                android:hint="@string/user"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/check_dirty_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_dirty"
            android:checked="true" />

    </LinearLayout>


</RelativeLayout>
